# SmallPebble

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.ipynb  README.md  TODO  build.py  datasets_to_npz.ipynb  pyproject.toml  requirements-cupy.txt  requirements-test.txt  requirements.txt  setup.py  style-guide.md  test-requirements.txt
.github/workflows/: ci.yml  cicd.yml  pythonpackage.yml  release.yml  test.yml
dev/: environment.yml
smallpebble/: __init__.py  array_library.py  datasets.py  gradcheck.py  mnist.py  numerical_gradients.py  smallpebble.py  version.py
smallpebble/core/: __init__.py  ops.py
smallpebble/misc/: __init__.py  data.py  mnist.py
smallpebble/nn/: __init__.py  conv.py  training.py
smallpebble/tests/: __init__.py  test_smallpebble.py
tests/: numerical_gradients.py  test_smallpebble.py
