[project]
name = "smallpebble"
version = "3.0.5"
description = "A minimalist deep learning library written from scratch in Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Sidney Radcliffe", email = "sidneyradcliffe@gmail.com"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
examples = [
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.8",
    "ipykernel>=7.1.0",
]

[dependency-groups]
dev = [
    "nbconvert>=7.16.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "tensorflow>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/sradc/smallpebble"
Repository = "https://github.com/sradc/smallpebble"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."] 

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F = standard flake8 rules, I = isort (import sorting)
select = ["E", "F", "I"] 
ignore = [
    "E731", # "Do not assign a `lambda` expression, use a `def`" <- makes code verbose
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false 
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "uv build"
